Fix overflow on reload button

--- a/file/style/be.bastelstu.chat.less
+++ b/file/style/be.bastelstu.chat.less
@@ -441,7 +441,7 @@
 	
 	.sidebar {
 		> div {
-			> fieldset{
+			> fieldset {
 				padding-right: @wcfGapTiny;
 				
 				> div {
@@ -450,6 +450,10 @@
 					> ul {
 						padding-right: @wcfGapSmall;
 					}
+				}
+				
+				> div.overflowVisible {
+					overflow-y: visible;
 				}
 				
 				&#timsChatUserListContainer {
